2004-08-11  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/draw/tool-load.png: created with image from http://www.openclipart.org in public domain
	* boards/draw/tool-save.png: created with image from http://www.openclipart.org in public domain
	* boards/skins/default/button_load.png: removed, not used
	* boards/skins/default/button_save.png: removed, not used
	* src/boards/draw.c: (load_image), (save_image): implemented basic load/save. Not complete yet.
	* src/gcompris/sdlplayer.c: Now, display an explicit error on stderr if ogg vorbis support is not
	installed (Thanks to Yin Xu <yxu@ic-tech.ca>)
	* src/boards/python/anim.py: added load/save buttons.

2004-08-08  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/Makefile.am: added ballcatch game
	* boards/boardicons/ballcatch.png: added ballcatch game
	* boards/flags/gcompris_flags.assetml.in: added Walloon flag
	* boards/gcompris/misc/hand.png: created by Bruno
	* boards/gcompris/misc/tux.png: fixed. border had white
	* configure.in:
	* po/POTFILES.in: added ballcatch game
	* src/boards/clickgame.c: (clickgame_end),
	(clickgame_destroy_all_items): fixed, level 2 and above, fishes was not going out
	* src/boards/python/ballcatch.py: create by Bruno
	* src/boards/python/pythontest.py: includes now a ballcatch prototype
	* src/gcompris/config.c: added Wallon

2004-08-01  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/svgutil.c: (gcompris_pixbuf_to_svg_file): fixed by Yves.

2004-07-31  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/svgutil.c: (gcompris_clone_item),
	(gcompris_transform_canvas_to_svg_file),
	(gcompris_re_colors_to_svg_file), (gcompris_rect_to_svg_file),
	(gcompris_pixbuf_to_svg_file): reindented. uncommented gdk_pixbuf_save_to_buffer. Do not work for me.
	Yves, I need help !!

2004-07-30  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/file_selector.c: (gcompris_file_selector_stop),
	(display_file_selector), (item_event_directory),