@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<GCompris>
+  <Board
+        name="ballcatch"
+        type="python:ballcatch"
+        section="/."
+        icon="boardicons/ballcatch.png"
+        difficulty="0"
+        author="Bruno Coudoin (bruno.coudoin@free.fr)"
+        boarddir="">
+        <_title>Send the ball to Tux</_title>
+        <_description>Push the two shift keys together to send the ball straight</_description>
+        <_prerequisite></_prerequisite>
+        <_goal></_goal>
+        <_credit></_credit>
+  </Board>
+  <Data directory=""/>
+</GCompris>
