@@ -1,3 +1,8 @@
+2004-08-12  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* boards/ballcatch.xml.in: missing file, ballcatch game
+	* boards/flags/wa.png: created from the official flag.
+
 2004-08-11  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* boards/draw/tool-load.png: created with image from http://www.openclipart.org in public domain
